--- a/InteractiveMap/Client/src/components/modalFills/DefaultPlacemark.module.css
+++ b/InteractiveMap/Client/src/components/modalFills/DefaultPlacemark.module.css
@@ -1,11 +1,20 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    gap: 10px;
     color: black;
 }
 
 .options {
     display: flex;
     gap: 10px;
+}
+
+.name {
+    width: 100%;
+}
+
+.area {
+    
 }
