--- a/Client/src/components/header/header.module.css
+++ b/Client/src/components/header/header.module.css
@@ -1,28 +1,38 @@
 .header {
     background-color: rgb(4, 12, 136);
     display: flex;
-    padding: 1em;
     align-items: center;
-    height: 10vh;
     box-sizing: border-box;
+    justify-content: space-between;
 }
 
 .navigation {
     display: flex;
-    margin-left: 30px;
-    gap: 20px;
-    font-size: 1.2em;
     color: rgb(231, 231, 231);
 }
 
 .navElem {
     text-decoration: none;
-    color: rgb(194, 192, 192)
+    color: rgb(194, 192, 192);
+    border-right: 2px solid #000000;
+    padding: 0px 10px;
+    text-align: center;
+    font-size: 25px;
+    height: 80px;
+    display: flex;
+}
+
+
+
+.mainLogo {
+    display: flex;
+    margin-top: auto;
 }
 
 .navElem:hover {
     cursor: pointer;
     color: white;
+    background-color: #F5B809;
 }
 
 .headerBtn {
@@ -41,4 +51,32 @@
 .icon {
     font-size: 40px;
     color: rgb(138, 14, 14);
+}
+
+.arms {
+    margin-top: auto;
+    margin-left: 10px;
+}
+
+.nav {
+    display: flex;
+    margin: auto;
+    margin-left: 25px;
+    padding: 15px 0px;
+}
+
+.button {
+    display: flex;
+    margin-right: 15px;
+}
+
+.button p {
+    color: white;
+    font-size: 25px;
+    margin: auto 0;
+    margin-right: 15px;
+}
+
+.button button {
+    margin: auto;
 }
