--- a/Client/src/components/drawerWrapper/DrawerWrapper.module.css
+++ b/Client/src/components/drawerWrapper/DrawerWrapper.module.css
@@ -7,3 +7,16 @@
 .item {
     font-size: 1.1em;
 }
+
+.insertContainer {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.circle {
+    border: 1px solid black;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+}
