--- a/Client/src/components/header/header.module.css
+++ b/Client/src/components/header/header.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     box-sizing: border-box;
     justify-content: space-between;
-    height: 12vh;
+    height: 13vh;
 }
 
 .navigation {
@@ -28,6 +28,7 @@
 .mainLogo {
     display: flex;
     margin-top: auto;
+    padding: 20px;
 }
 
 .navElem:hover {
