--- a/Client/src/components/header/header.module.css
+++ b/Client/src/components/header/header.module.css
@@ -13,17 +13,16 @@
 }
 
 .navElem {
-    text-decoration: none;
     color: rgb(194, 192, 192);
-    border-right: 2px solid #000000;
-    padding: 0px 10px;
-    text-align: center;
-    font-size: 25px;
+    font-size: 22px;
     height: 80px;
     display: flex;
+    margin: 0 auto;
 }
 
-
+.inner {
+    margin: auto 10px;
+}
 
 .mainLogo {
     display: flex;
@@ -34,7 +33,6 @@
 .navElem:hover {
     cursor: pointer;
     color: white;
-    background-color: #F5B809;
 }
 
 .headerBtn {
